[gd_scene load_steps=2 format=3 uid="uid://bqinw3clufyk0"]

[ext_resource type="Script" path="res://Scripts/UI/TestingHub.gd" id="1_jfa04"]

[node name="TestingHub" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jfa04")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 2
offset_right = 1280.0
offset_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.231373, 0.176471, 0.333333, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -232.0
offset_right = 640.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
alignment = 1

[node name="LifelessViewer" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Lifeless Viewer"

[node name="LifelessCreator" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Lifeless Creator"

[node name="TestAI" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Test AI"

[node name="CenterContainer2" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 128.0

[node name="Label" type="Label" parent="CenterContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 38
text = "Debugging Menu"

[connection signal="pressed" from="CenterContainer/VBoxContainer/LifelessViewer" to="." method="_on_lifeless_viewer_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/LifelessCreator" to="." method="_on_lifeless_creator_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/TestAI" to="." method="_on_test_ai_pressed"]
